@@ -1,6 +1,7 @@
 Version 1.1.6
 	Fixes:
 	* Cloud Storage increments lenght correctly now. 
+	* Fixed Symlink issues
 	Enhancements
 	* Refactored cloud storage options. Changed all cloud provider specific options to generic options "cloud-access-key,cloud-bucket-name,cloud-compress,cloud-secret-key"
 	* Changed CSByteArrayLongMap claimed array from byte array to bitmap
@@ -8,6 +9,8 @@ Version 1.1.6
 	* Changed hash-length mkfs option to hash-type. This option has to possible values tiger16|tiger24|murmur3_128
 	* Added azure as a cloud storage provider.
 	* Added progress bar to loading, DSE Compaction, and Consistancy Check
+	* Added attribute to volume tag within xml configuration "allow-external-links" that allows/disallows symlinks from external filesystems. By default this is set 
+	to true.
 Version 1.1.5
 	Fixes :
 	* Replication null pointer error for files without data
